changes in footer and index page

--- a/contact.html
+++ b/contact.html
@@ -121,18 +121,20 @@
 
     <section class="position-relative space">
         <div class="th-bg-img background-image" style="background-image: url(&quot;assets/img/bg/cta_bg_2.jpg&quot;);">
-            <img src="assets/img/bg/bg_overlay_1.png" alt="overlay"></div>
+            <img src="assets/img/bg/bg_overlay_1.png" alt="overlay">
+        </div>
         <div class="container z-index-common">
             <div class="row justify-content-center">
                 <div class="col-xl-6 col-lg-7 col-md-9 text-center">
                     <div class="title-area mb-35"><span class="sub-title">
                             <div class="icon-masking me-2"><span class="mask-icon bg-mask"
                                     style="mask-image: url(&quot;assets/img/theme-img/title_shape_2.svg&quot;);"></span>
-                                <img src="assets/img/theme-img/title_shape_2.svg" alt="shape"></div>CONTACT US
+                                <img src="assets/img/theme-img/title_shape_2.svg" alt="shape">
+                            </div>CONTACT US
                         </span>
+                    </div>
                 </div>
             </div>
-        </div>
     </section>
     <!-- Contact Body -->
     <div class="space">
@@ -273,9 +275,10 @@
                         <div class="widget footer-widget">
                             <h3 class="widget_title">About Us</h3>
                             <div class="th-widget-about">
-                                <p class="about-text">Passionate about shaping the next generation of tech talent, Founded by seasoned software professionals, we bring real world exertise and Industy insights to our training and placement programs.</p>
-                                <div class="th-social"><a href="#"><i
-                                            class="fab fa-facebook-f"></i></a> <a href="#"><i
+                                <p class="about-text">We are passionate about shaping the next generation of tech
+                                    talent. In Achievers Tech our Trained software trainers provide real-world expertise
+                                    and industry insights to our training and placement programs</p>
+                                <div class="th-social"><a href="#"><i class="fab fa-facebook-f"></i></a> <a href="#"><i
                                             class="fab fa-twitter"></i></a> <a href="#"><i
                                             class="fab fa-linkedin-in"></i></a> <a href="#"><i
                                             class="fab fa-whatsapp"></i></a> <a href="#"><i
