--- a/index.html
+++ b/index.html
@@ -160,21 +160,21 @@
                         <h2 class="sec-title">We Deal With The Quality Of <span class="text-theme">
                                 Training</span></h2>
                     </div>
-                    <p class="mt-n2 mb-25">Achievers Tech is a leading software development and education institute
-                        committed to delivering industry-level experience and quality training to help candidates
-                        achieve their goals. We serve as an expert software training organization that aims to
-                        bridge the gap between the demands of the industry and the curriculum of educational
-                        institutions. Our institute provides a platform where young and ambitious minds can acquire
-                        the skills and knowledge necessary to build successful careers in the tech industry. Our
-                        mission is to equip our candidates with the tools and expertise they need to thrive in the
-                        ever-evolving tech landscape.</p>
+                    <p class="mt-n2 mb-25">Achievers Tech is a leading software development training institute committed
+                        to delivering industry-level experience and quality training to help candidates achieve their
+                        goals. We serve as an expert software training organization that aims to bridge the gap between
+                        the demands of the industry and the curriculum of educational institutions. Our institute
+                        provides a platform where young and ambitious minds can acquire the skills and knowledge
+                        necessary to build successful careers in the tech industry. Our mission is to equip our
+                        candidates with the tools and expertise they need to thrive in the ever-evolving tech landscape.
+                    </p>
                     <div class="about-feature-wrap">
                         <div class="about-feature">
                             <div class="about-feature_icon"><img src="assets/img/icon/about_feature_1_1.svg" alt="Icon">
                             </div>
                             <div class="media-body">
                                 <h3 class="about-feature_title">Certified Institute</h3>
-                                <p class="about-feature_text">Best Skills</p>
+                                <p class="about-feature_text">ISO-9001 Certified</p>
                             </div>
                         </div>
                         <div class="about-feature">
@@ -262,19 +262,37 @@
                                     src="assets/img/theme-img/title_shape_1.svg" alt="shape">
                             </div>WHY CHOOSE US
                         </span>
-                        <h2 class="sec-title">We are dedicated to inspiring<span class="text-theme"> Industry
+                        <h2 class="sec-title d-inline-block">We are dedicated to inspiring<span class="text-theme">
+                                Industry
                                 Excellence.</span></h2>
                     </div>
-                    <p class="mt-n2 mb-30">To promote overall growth and character development in students, education
-                        quality must be pure and wholesome. However, focusing solely on such education may overlook
-                        valuable perspectives and experiences that benefit a student's growth. Therefore, a balance must
-                        be struck between different approaches to education, and open-mindedness to alternative
-                        viewpoints must be maintained. Ultimately, the goal should be to provide a complete education
-                        that recognizes and nurtures the unique qualities and potential of each student.</p>
+                    <p class="mt-n2 mb-30">
+                    <h6>
+                        Our Experties
+                    </h6>
+                    <span>At Skill Developers, we are very proud of our instructors. They have been hand-picked
+                        industry-leaders in their fields. With years of combined experience and an array of credentials,
+                        our team provides educational training that is second to none. Because software is constantly
+                        changing there’s always something new to learn, our instructors strive to stay well-informed of
+                        the latest technological advancements. Each of our instructors is certified, and through
+                        continuing education, they maintain cutting edge knowledge that allows them to provide our
+                        clients with skill training that is innovative and relevant.</span>
+
+                    <br><br>
+                    <h6>
+                        Our Approch
+                    </h6>
+                    <span>By providing our clients with the best authorized IT educators in the business, we can ensure
+                        that you will be completely satisfied with the training that we provide. Our instructors take
+                        the time to build relationships with the clients in order to fully understand training needs and
+                        customize educational plans to ensure that you receive top of the line training. We tailor our
+                        training plans on the needs of each of our clients through a unique assesment and development
+                        process, and ultimately deliver customized programs with the best trainers available.</span></p>
+                    <br><br>
                     <div class="two-column">
                         <div class="checklist style2">
                             <ul>
-                                <li><i class="far fa-check"></i> Cutting Edge Technologies</li>
+                                <li><i class="far fa-check"></i> Cutting-edge Technologies</li>
                                 <li><i class="far fa-check"></i> Weekly Mock Interview</li>
                                 <li><i class="far fa-check"></i> 24/7 Online Support</li>
                                 <li><i class="far fa-check"></i> Placement Support</li>
@@ -282,7 +300,7 @@
                         </div>
                         <div class="checklist style2">
                             <ul>
-                                <li><i class="far fa-check"></i> Experianced Trainers</li>
+                                <li><i class="far fa-check"></i> Experienced Trainers</li>
                                 <li><i class="far fa-check"></i> Career Guidance</li>
                                 <li><i class="far fa-check"></i> Weekly Assignments</li>
                                 <li><i class="far fa-check"></i> Course Completion Certificate</li>
@@ -671,11 +689,11 @@
                             <div id="collapse-1" class="accordion-collapse collapse show"
                                 aria-labelledby="collapse-item-1" data-bs-parent="#faqAccordion">
                                 <div class="accordion-body">
-                                    <p class="faq-text">We are conducting instructor-led online Training.
-                                        Each live session will be 100% job oriented training with lots of examples for
-                                        your easy understanding. Course training is provided by experienced working
-                                        professionals who are passionate about the subject. Course content is designed
-                                        by considering current market technology and job market.</p>
+                                    <p class="faq-text">We are conducting instructor-led online training. Each live
+                                        session will be 100% job-oriented training with lots of examples for your easy
+                                        understanding. Course training is provided by experienced working professionals
+                                        who are passionate about the subject. Course content is designed by considering
+                                        current market technology and the job market.</p>
                                 </div>
                             </div>
                         </div>
@@ -704,7 +722,7 @@
                                 <div class="accordion-body">
                                     <p class="faq-text">Yes. We have uploaded demo sessions for all the courses on the
                                         respective course details page. These are the exact recordings of our live
-                                        sessions. You can watch these demo sessions for free before enrolling for any
+                                        sessions. You can watch these demo sessions for free before enrolling in any
                                         course.</p>
                                 </div>
                             </div>
@@ -719,8 +737,8 @@
                                 data-bs-parent="#faqAccordion">
                                 <div class="accordion-body">
                                     <p class="faq-text">Yes. We will conduct mock interview sessions weekly and at the
-                                        end of the course. You can schedule a mock interview date with our instructor.
-                                        Mock interview is very helpful to practice so you can confidently appear and
+                                        end of the course. You can schedule a mock interview date with our instructor. A
+                                        mock interview is very helpful to practice so you can confidently appear and
                                         clear any real-time job interview.</p>
                                 </div>
                             </div>
@@ -760,9 +778,9 @@
                         <div class="widget footer-widget">
                             <h3 class="widget_title">About Us</h3>
                             <div class="th-widget-about">
-                                <p class="about-text">Passionate about shaping the next generation of tech talent,
-                                    Founded by seasoned software professionals, we bring real world exertise and Industy
-                                    insights to our training and placement programs.</p>
+                                <p class="about-text">We are passionate about shaping the next generation of tech
+                                    talent. In Achievers Tech our Trained software trainers provide real-world expertise
+                                    and industry insights to our training and placement programs</p>
                                 <div class="th-social"><a href="#"><i class="fab fa-facebook-f"></i></a> <a href="#"><i
                                             class="fab fa-twitter"></i></a> <a href="#"><i
                                             class="fab fa-linkedin-in"></i></a> <a href="#"><i
