--- a/java.html
+++ b/java.html
@@ -590,9 +590,9 @@
                         <div class="widget footer-widget">
                             <h3 class="widget_title">About Us</h3>
                             <div class="th-widget-about">
-                                <p class="about-text">Professionally redefine transparent ROI through low-risk
-                                    high-yield imperatives. Progressively create empowered. cost effective users via
-                                    team driven.</p>
+                                <p class="about-text">We are passionate about shaping the next generation of tech
+                                    talent. In Achievers Tech our Trained software trainers provide real-world expertise
+                                    and industry insights to our training and placement programs</p>
                                 <div class="th-social"><a href="https://www.facebook.com/"><i
                                             class="fab fa-facebook-f"></i></a> <a href="https://www.twitter.com/"><i
                                             class="fab fa-twitter"></i></a> <a href="https://www.linkedin.com/"><i
