--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
             <div class="th-mobile-menu">
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li class="menu-item-has-children"><a href="#">Cources</a>
+                    <li class="menu-item-has-children"><a href="#">Courses</a>
                         <ul class="sub-menu">
                             <li><a href="software-testing.html">Software Testing</a></li>
                             <li><a href="aws-devops.html">AWS/DevOps</a></li>
@@ -92,7 +92,7 @@
                                 <ul>
                                     <li><a href="index.html">Home</a></li>
                                     <li class="menu-item-has-children">
-                                        <a href="#">Cources</a>
+                                        <a href="#">Courses</a>
                                         <ul class="sub-menu">
                                             <li><a href="software-testing.html">Software Testing</a></li>
                                             <li><a href="aws-devops.html">AWS/DevOps</a></li>
@@ -200,30 +200,16 @@
                                 <img src="assets/img/theme-img/title_shape_1.svg" alt="shape">
                             </div>Contact With Us
                         </span>
-                        <h2 class="sec-title text-white">Get free Cunsultaion today. Feel free to contact!
+                        <h2 class="sec-title text-white">Feel free to contact!
                         </h2>
                         <p class="sec-text">We’re happy to answer any questions you may have and help you determine
-                            best cources for you.</p>
+                            best Courses for you.</p>
                     </div>
                     <div class="feature-wrapper style3">
                         <div class="feature-icon"><a href="tel:+918484039108"><img src="assets/img/icon/call_2.svg"
                                     alt=""></a></div>
                         <div class="media-body"><span class="header-info_label">Call us at:</span>
                             <p class="header-info_link"><a href="tel:+918484039108">+91-848-403-9108</a></p>
-                        </div>
-                    </div>
-                    <div class="work-area">
-                        <h5 class="box-title mb-30 text-white">How We Works?</h5>
-                        <div class="work-item_wrapper">
-                            <div class="work-item"><span class="work-item_number">01</span>
-                                <p class="work-text">Engage with Students to understand their needs. </p>
-                            </div>
-                            <div class="work-item"><span class="work-item_number">02</span>
-                                <p class="work-text">Gather feedback from students to understand their requirment.</p>
-                            </div>
-                            <div class="work-item"><span class="work-item_number">03</span>
-                                <p class="work-text">Guidance Provided for thier needs.</p>
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -300,7 +286,7 @@
                     </div>
                     <div class="col-md-6 col-xl-auto">
                         <div class="widget widget_nav_menu footer-widget">
-                            <h3 class="widget_title">OUR Cources</h3>
+                            <h3 class="widget_title">OUR Courses</h3>
                             <div class="menu-all-pages-container">
                                 <ul class="menu">
                                     <li><a href="angular.html">Web Development</a></li>
@@ -313,7 +299,7 @@
                     </div>
                     <div class="col-md-6 col-xl-auto">
                         <div class="widget footer-widget">
-                            <h3 class="widget_title">Recent Posts</h3>
+                            <h3 class="widget_title">Recent Events</h3>
                             <div class="recent-post-wrap">
                                 <div class="recent-post">
                                     <div class="media-img"><a href="#"><img src="assets/img/blog/recent-post-2-1.jpg"
@@ -352,7 +338,6 @@
                         <div class="footer-links">
                             <ul>
                                 <li><a href="about.html">Terms &amp; Condition</a></li>
-                                <li><a href="about.html">Careers</a></li>
                                 <li><a href="about.html">Privacy Policy</a></li>
                             </ul>
                         </div>
