--- a/faq.html
+++ b/faq.html
@@ -31,7 +31,7 @@
             <div class="th-mobile-menu">
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li class="menu-item-has-children"><a href="#">Cources</a>
+                    <li class="menu-item-has-children"><a href="#">Courses</a>
                         <ul class="sub-menu">
                             <li><a href="software-testing.html">Software Testing</a></li>
                             <li><a href="aws-devops.html">AWS/DevOps</a></li>
@@ -92,7 +92,7 @@
                                 <ul>
                                     <li><a href="index.html">Home</a></li>
                                     <li class="menu-item-has-children">
-                                        <a href="#">Cources</a>
+                                        <a href="#">Courses</a>
                                         <ul class="sub-menu">
                                             <li><a href="software-testing.html">Software Testing</a></li>
                                             <li><a href="aws-devops.html">AWS/DevOps</a></li>
@@ -370,7 +370,7 @@
                     </div>
                     <div class="col-md-6 col-xl-auto">
                         <div class="widget widget_nav_menu footer-widget">
-                            <h3 class="widget_title">OUR Cources</h3>
+                            <h3 class="widget_title">OUR Courses</h3>
                             <div class="menu-all-pages-container">
                                 <ul class="menu">
                                     <li><a href="angular.html">Web Development</a></li>
