--- a/software-testing.html
+++ b/software-testing.html
@@ -31,7 +31,7 @@
             <div class="th-mobile-menu">
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li class="menu-item-has-children"><a href="#">Cources</a>
+                    <li class="menu-item-has-children"><a href="#">Courses</a>
                         <ul class="sub-menu">
                             <li><a href="software-testing.html">Software Testing</a></li>
                             <li><a href="aws-devops.html">AWS/DevOps</a></li>
@@ -92,7 +92,7 @@
                                 <ul>
                                     <li><a href="index.html">Home</a></li>
                                     <li class="menu-item-has-children">
-                                        <a href="#">Cources</a>
+                                        <a href="#">Courses</a>
                                         <ul class="sub-menu">
                                             <li><a href="software-testing.html">Software Testing</a></li>
                                             <li><a href="aws-devops.html">AWS/DevOps</a></li>
@@ -477,7 +477,7 @@
                     <div class="col-lg-4 mb-5 mb-lg-0 ">
                         <div class="border p-4 rounded feature-icon-box">
                             <div>
-                                <img src="./assets/img/cources/cources1.png" width="64" class="mb-0" alt="cource1">
+                                <img src="./assets/img/Courses/Courses1.png" width="64" class="mb-0" alt="cource1">
                             </div>
                             <h5 class="lead">
                                 Comprehensive Course Curriculum
@@ -490,7 +490,7 @@
                     <div class="col-lg-4 mb-5 mb-lg-0 ">
                         <div class="border p-4 rounded feature-icon-box">
                             <div>
-                                <img src="./assets/img/cources/cources2.png" width="64" class="mb-4" alt="cource2">
+                                <img src="./assets/img/Courses/Courses2.png" width="64" class="mb-4" alt="cource2">
                             </div>
                             <h5 class="lead">
                                 Experienced Industry Professionals
@@ -504,7 +504,7 @@
                     <div class="col-lg-4 mb-5 mb-lg-0 ">
                         <div class="border p-4 rounded feature-icon-box">
                             <div>
-                                <img src="./assets/img/cources/cources3.png" width="64" class="mb-4" alt="cource3">
+                                <img src="./assets/img/Courses/Courses3.png" width="64" class="mb-4" alt="cource3">
                             </div>
                             <h5 class="lead">
                                 24/7 Learning Access
@@ -518,7 +518,7 @@
                     <div class="col-lg-4 mb-5 mb-lg-0 ">
                         <div class="border p-4 rounded feature-icon-box">
                             <div>
-                                <img src="./assets/img/cources/cources4.png" width="64" class="mb-4" alt="cource4">
+                                <img src="./assets/img/Courses/Courses4.png" width="64" class="mb-4" alt="cource4">
                             </div>
                             <h5 class="lead">
                                 Comprehensive Placement Programs
@@ -531,7 +531,7 @@
                     <div class="col-lg-4 mb-5 mb-lg-0 ">
                         <div class="border p-4 rounded feature-icon-box">
                             <div>
-                                <img src="./assets/img/cources/cources5.png" width="64" class="mb-4" alt="cource5">
+                                <img src="./assets/img/Courses/Courses5.png" width="64" class="mb-4" alt="cource5">
                             </div>
                             <h5 class="lead">
                                 Hands-on Practice
@@ -543,7 +543,7 @@
                     <div class="col-lg-4 mb-5 mb-lg-0 ">
                         <div class="border p-4 rounded feature-icon-box">
                             <div>
-                                <img src="./assets/img/cources/cources6.png" width="64" class="mb-4" alt="cource5">
+                                <img src="./assets/img/Courses/Courses6.png" width="64" class="mb-4" alt="cource5">
                             </div>
                             <h5 class="lead">
                                 One to One Sessions
@@ -593,7 +593,7 @@
                     </div>
                     <div class="col-md-6 col-xl-auto">
                         <div class="widget widget_nav_menu footer-widget">
-                            <h3 class="widget_title">OUR Cources</h3>
+                            <h3 class="widget_title">OUR Courses</h3>
                             <div class="menu-all-pages-container">
                                 <ul class="menu">
                                     <li><a href="angular.html">Web Development</a></li>
