new pages added

--- a/aws-devops.html
+++ b/aws-devops.html
@@ -584,7 +584,7 @@
                 </div>
             </div>
         </div>
-        <div class="container elementor-element elementor-element-9a38a21 elementor-widget elementor-widget-text-editor"
+        <!-- <div class="container elementor-element elementor-element-9a38a21 elementor-widget elementor-widget-text-editor"
             data-id="9a38a21" data-element_type="widget" data-widget_type="text-editor.default">
             <div class="elementor-widget-container">
                 <div class="widget widget_download  ">
@@ -603,7 +603,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <div class="container mt-5 px-3">
             <div class="gx-5 training-features">
                 <h5 class="text-theme">Training Features </h5>
@@ -611,7 +611,7 @@
                     <div class="col-lg-4 mb-5 mb-lg-0 ">
                         <div class="border p-4 rounded feature-icon-box">
                             <div>
-                                <img src="./assets/img/Courses/Courses1.png" width="64" class="mb-0" alt="cource1">
+                                <img src="./assets/img/cources/cources1.png" width="64" class="mb-0" alt="cource1">
                             </div>
                             <h5 class="lead">
                                 Comprehensive Course Curriculum
@@ -624,7 +624,7 @@
                     <div class="col-lg-4 mb-5 mb-lg-0 ">
                         <div class="border p-4 rounded feature-icon-box">
                             <div>
-                                <img src="./assets/img/Courses/Courses2.png" width="64" class="mb-4" alt="cource2">
+                                <img src="./assets/img/cources/cources2.png" width="64" class="mb-4" alt="cource2">
                             </div>
                             <h5 class="lead">
                                 Experienced Industry Professionals
@@ -638,7 +638,7 @@
                     <div class="col-lg-4 mb-5 mb-lg-0 ">
                         <div class="border p-4 rounded feature-icon-box">
                             <div>
-                                <img src="./assets/img/Courses/Courses3.png" width="64" class="mb-4" alt="cource3">
+                                <img src="./assets/img/cources/cources3.png" width="64" class="mb-4" alt="cource3">
                             </div>
                             <h5 class="lead">
                                 24/7 Learning Access
@@ -652,7 +652,7 @@
                     <div class="col-lg-4 mb-5 mb-lg-0 ">
                         <div class="border p-4 rounded feature-icon-box">
                             <div>
-                                <img src="./assets/img/Courses/Courses4.png" width="64" class="mb-4" alt="cource4">
+                                <img src="./assets/img/cources/cources4.png" width="64" class="mb-4" alt="cource4">
                             </div>
                             <h5 class="lead">
                                 Comprehensive Placement Programs
@@ -665,7 +665,7 @@
                     <div class="col-lg-4 mb-5 mb-lg-0 ">
                         <div class="border p-4 rounded feature-icon-box">
                             <div>
-                                <img src="./assets/img/Courses/Courses5.png" width="64" class="mb-4" alt="cource5">
+                                <img src="./assets/img/cources/cources5.png" width="64" class="mb-4" alt="cource5">
                             </div>
                             <h5 class="lead">
                                 Hands-on Practice
@@ -677,7 +677,7 @@
                     <div class="col-lg-4 mb-5 mb-lg-0 ">
                         <div class="border p-4 rounded feature-icon-box">
                             <div>
-                                <img src="./assets/img/Courses/Courses6.png" width="64" class="mb-4" alt="cource5">
+                                <img src="./assets/img/cources/cources6.png" width="64" class="mb-4" alt="cource5">
                             </div>
                             <h5 class="lead">
                                 One to One Sessions
