--- a/dotnet.html
+++ b/dotnet.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Full Stack Development</title>
+    <title>Dot Net</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -132,7 +132,7 @@
                             <div class="icon-masking me-2"><span class="mask-icon bg-mask"
                                     style="mask-image: url(&quot;assets/img/theme-img/title_shape_2.svg&quot;);"></span>
                                 <img src="assets/img/theme-img/title_shape_2.svg" alt="shape">
-                            </div>FULL STACK DEVELOPMENT
+                            </div>DOT NET DEVELOPMENT
                         </span>
                     </div>
                 </div>
