--- a/contact.html
+++ b/contact.html
@@ -137,6 +137,7 @@
                     </div>
                 </div>
             </div>
+        </div>
     </section>
     <!-- Contact Body -->
     <div class="space">
@@ -266,7 +267,7 @@
                                 <p class="about-text">We are passionate about shaping the next generation of tech
                                     talent. In Achievers Tech our Trained software trainers provide real-world expertise
                                     and industry insights to our training and placement programs</p>
-                                <div class="th-social"><a href="#"><i class="fab fa-facebook-f"></i></a>  <a><i
+                                <div class="th-social"><a href="#"><i class="fab fa-facebook-f"></i></a> <a><i
                                             class="fab fa-whatsapp"></i></a> <a href="#"><i
                                             class="fab fa-youtube"></i></a></div>
                             </div>
